force-app/main/default/objects/User_Provisioning_Event__e/User_Provisioning_Event__e.object-meta.xml
<CustomObject>
    <label>User Provisioning Event</label>
    <pluralLabel>User Provisioning Events</pluralLabel>
</CustomObject>