force-app/main/default/objects/User_Provisioning_Event__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>