force-app/main/default/objects/User_Provisioning_Event__e/fields/Previous_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_Job_Code__c</fullName>
    <label>Previous Job Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>